--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "~TODO~",
+  "name": "@lennyburdette/change-management-diagrams",
   "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
@@ -36,6 +37,7 @@
     "@fontsource/source-code-pro": "^4.5.0",
     "@fontsource/source-sans-pro": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.31",
     "@tailwindcss/typography": "^0.4.1",
     "cookie": "^0.4.1",
     "tailwindcss-hero-patterns": "^0.0.1",
