--- a/src/lib/scenarios/backward-compatible.yaml
+++ b/src/lib/scenarios/backward-compatible.yaml
@@ -3,20 +3,25 @@ steps:
     states:
       task-merge-pr: { type: ACTIVE }
   - title: Run prerelease steps (tests and schema checks)
+    description: |
+      Schema checks use the schema registry in Studio to ensure that the new
+      subgraph schema composes with other subgraphs.
     states:
       task-merge-pr: { type: COMPLETE }
       task-run-tests: { type: ACTIVE }
       task-run-checks: { type: ACTIVE }
+      studio: { type: ACTIVE }
   - title: 'Build artifacts for release: the subgraph schema for publishing to Studio, and the deployable artifact for the Subgraph A servers'
     states:
       task-run-tests: { type: COMPLETE }
       task-run-checks: { type: COMPLETE }
-      task-build-schema: { type: ACTIVE, schema: 2 }
-      task-build-deployable: { type: ACTIVE, code: 1 }
+      task-build-schema: { type: ACTIVE, schema: Z }
+      task-build-deployable: { type: ACTIVE, code: 3 }
+      studio: { type: DEFAULT }
   - title: Publish the subgraph schema to the "prod" variant in Apollo Studio
     states:
-      task-build-schema: { type: COMPLETE, schema: 2 }
-      task-build-deployable: { type: COMPLETE, code: 1 }
+      task-build-schema: { type: COMPLETE, schema: Z }
+      task-build-deployable: { type: COMPLETE, code: 3 }
       task-publish-to-prod: { type: ACTIVE }
       studio: { type: ACTIVE }
   - title: Studio generates a new supergraph which propagates to the Gateway servers
@@ -27,19 +32,19 @@ steps:
       operations to include new schema elements when the Gateway's schema updates.
     states:
       studio: { type: ACTIVE }
-      gateway-blue: { type: SCHEMA, schema: 1, active: true }
+      gateway-blue: { type: SCHEMA, schema: ZY, active: true }
   - title: Initiate a rolling deploy of Subgraph A
     states:
       task-publish-to-prod: { type: COMPLETE }
       task-initiate-deployment: { type: ACTIVE }
       studio: { type: DEFAULT }
-      gateway-blue: { type: SCHEMA, schema: 1, active: false }
-      subgraph-a: { type: ROLLING_DEPLOY, schema: 2, code: 1 }
+      gateway-blue: { type: SCHEMA, schema: ZY, active: false }
+      subgraph-a: { type: ROLLING_DEPLOY, schema: 'Z', code: 3 }
   - title: Now clients can start making requests with the new schema
     states:
       task-initiate-deployment: { type: COMPLETE }
       client: { type: ACTIVE }
-      subgraph-a: { type: DEPLOY, schema: 2, code: 1 }
+      subgraph-a: { type: DEPLOY, schema: 'Z', code: 3 }
 tasks:
   - - id: 'task-merge-pr'
       label: 'Merge PR'
